<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background = "#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight = "0.4"
        android:text = "@string/tutorial_registerTitle"
        android:fontFamily="@font/sdgothicneo_sb"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:gravity = "center"
        android:textSize = "30sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0.2"
        android:orientation = "vertical">

        <EditText
            android:id = "@+id/tutorial_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/name"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <EditText
            android:id = "@+id/tutorial_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <EditText
            android:id = "@+id/tutorial_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/password"
            android:inputType="textPassword"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <EditText
            android:id = "@+id/tutorial_birth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/birth"
            android:textColorHint="#ffffff"
            android:editable = "false"
            android:focusable="false"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <EditText
            android:id = "@+id/tutorial_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/phoneNumber"
            android:inputType="phone"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation = "horizontal">

            <RadioGroup
                android:id = "@+id/genderGroup"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id = "@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/male"
                    android:textColor = "#ffffff"
                    android:buttonTint = "#ffb338"
                    android:layout_weight = "1"/>

                <RadioButton
                    android:id = "@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/female"
                    android:textColor = "#ffffff"
                    android:buttonTint = "#ffb338"
                    android:layout_weight = "1"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0.1"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/btn_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.3"
            android:layout_gravity = "center"
            android:text = "@string/signin"
            android:background = "#00ff0000"
            android:textColor = "#ffffff"
            android:textSize = "15sp"
            android:fontFamily="@font/sdgothicneo_light"/>

        <Button
            android:id = "@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.3"
            android:layout_gravity = "center"
            android:text = "@string/signup"
            android:background = "#00ff0000"
            android:textColor = "#ffb338"
            android:textSize = "20sp"
            android:fontFamily="@font/sdgothicneo_light"/>

    </LinearLayout>

</LinearLayout>