<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background = "#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:layout_weight = "0.4"
        android:text = "@string/login"
        android:textColor = "#ffffff"
        android:fontFamily="@font/sdgothicneo_bold"
        android:textSize = "40sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0.2"
        android:orientation = "vertical">

        <EditText
            android:id = "@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/e_mail"
            android:inputType = "textEmailAddress"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

        <EditText
            android:id = "@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center"
            android:hint = "@string/password"
            android:inputType="textPassword"
            android:textColorHint="#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:colorControlNormal = "#ffb338"
            android:textColor = "#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0.2"
        android:orientation = "horizontal">

        <Button
            android:id = "@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:text = "@string/forgot_password"
            android:background = "#00ff0000"
            android:textColor = "#ffffff"
            android:fontFamily="@font/sdgothicneo_light"
            android:textSize = "15sp"/>

        <Button
            android:id = "@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:text = "@string/signin"
            android:background = "#00ff0000"
            android:textColor = "#ffb338"
            android:fontFamily="@font/sdgothicneo_light"
            android:textSize = "15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0.5"
        android:orientation = "vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.001"
            android:layout_gravity="center_horizontal"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.01"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id = "@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0.02"
            android:layout_gravity="center_horizontal"
            android:text = "@string/register"
            android:textColor = "#ffffff"
            android:background = "#00ff0000"
            android:fontFamily="@font/sdgothicneo_light"
            android:textSize = "15sp"/>

    </LinearLayout>

</LinearLayout>