<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="500dp">

    <EditText
        android:id = "@+id/Popup_NicknameField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:hint = "닉네임"
        android:colorControlNormal = "#ffb338"
        android:textColor = "#000000"
        android:textColorHint = "#000000"
        android:fontFamily = "@font/sdgothicneo_regular"
        android:inputType = "text"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id = "@+id/Popup_PhoneField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:hint = "전화번호"
        android:colorControlNormal = "#ffb338"
        android:textColor = "#000000"
        android:textColorHint = "#000000"
        android:fontFamily = "@font/sdgothicneo_regular"
        android:inputType = "phone"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id = "@+id/tutorial_birth"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint = "@string/birth"
        android:textColorHint="#000000"
        android:fontFamily="@font/sdgothicneo_light"
        android:colorControlNormal = "#ffb338"
        android:editable = "false"
        android:focusable="false"
        android:layout_marginTop = "20dp"
        android:textColor = "#000000"/>

    <TextView
        android:id = "@+id/Popup_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "40dp"
        android:fontFamily="@font/sdgothicneo_regular"
        android:text = "성별"
        android:textColor = "#000000"
        android:textSize = "20sp"
        android:layout_marginLeft = "20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation = "horizontal">

        <RadioGroup
            android:id = "@+id/genderGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id = "@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/male"
                android:textColor = "#000000"
                android:buttonTint = "#ffb338"
                android:layout_weight = "1"/>

            <RadioButton
                android:id = "@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/female"
                android:textColor = "#000000"
                android:buttonTint = "#ffb338"
                android:layout_weight = "1"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/Popup_confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop = "50dp"
        android:background="@drawable/btn_rounded_shape2"
        android:drawableRight="@drawable/ic_arrow_right"
        android:fontFamily="@font/sdgothicneo_m"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:text="가입하기"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold" />


</LinearLayout>